gh-pages working

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css" />
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.css" type="text/css" />
-<link rel="stylesheet" href="styles.css" type="text/css" />
+<link rel="stylesheet" href="styles/styles.css" type="text/css" />
 
 </head>
 
@@ -64,7 +64,7 @@ img {
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="./students.html">about</a></li>
+        <li><a href="./students.html"><i class="fa fa-users"></i> students</a></li>
       </ul>
     </div>
   </div>
