rm htmlproofer from Travis test

--- a/00_test_theme.html
+++ b/00_test_theme.html
@@ -134,7 +134,7 @@ img {
 <p>You can also embed plots, for example:</p>
 <div id="heading2a" class="section level3">
 <h3>Heading2a</h3>
-<p><img src="img/Rmd_env-info_pressure-1.png" title="" alt="" width="672" /></p>
+<p><img src="img/Rmd_pressure-1.png" title="" alt="" width="672" /></p>
 </div>
 <div id="heading2b" class="section level3">
 <h3>Heading2b</h3>
