--- a/04-dplyr.html
+++ b/04-dplyr.html
@@ -15,10 +15,25 @@
 
 <script src="libs/jquery-1.11.0/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="libs/bootstrap-3.3.1/css/readable.min.css" rel="stylesheet" />
+<link href="libs/bootstrap-3.3.1/css/cosmo.min.css" rel="stylesheet" />
 <script src="libs/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <script src="libs/bootstrap-3.3.1/shim/html5shiv.min.js"></script>
 <script src="libs/bootstrap-3.3.1/shim/respond.min.js"></script>
+<link href="libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet">
+<script src="libs/tocify-1.9.1/jquery-ui-1.9.2.custom.min.js"></script>
+<script src="libs/tocify-1.9.1/jquery.tocify.min.js"></script>
+
+<link href="libs/lightbox-2.8.2/css/lightbox.min.css" rel="stylesheet">
+
+<style type="text/css">
+@media (max-width: 992px) {
+#toc {
+  position: relative;
+  width: 100%;
+  margin: 0px 0px 20px 0px;
+}
+}
+</style>
 
 
 <style type="text/css">code{white-space: pre;}</style>
@@ -49,8 +64,8 @@ code > span.er { color: #c3bf9f; }
 </style>
 
 
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.css" type="text/css" />
+<link rel="stylesheet" href="libs/font-awesome-4.5.0/css/font-awesome.min.css" type="text/css" />
+<link rel="stylesheet" href="libs/octicons-3.3.0/octicons.css" type="text/css" />
 <link rel="stylesheet" href="styles/styles.css" type="text/css" />
 
 </head>
@@ -74,10 +89,11 @@ img {
 </style>
 <div class="container-fluid main-container">
 
+
+<div class="row-fluid">
 <div class="navbar navbar-default navbar-fixed-top navbar-transparent">
   <div class="container">
     <div class="navbar-header">
-      <!--<a href="./" class="navbar-brand"><img src="img/Bren-logo_height50.png">env-info</a>-->
       <a href="./" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
@@ -97,24 +113,19 @@ img {
     </div>
   </div>
 </div>
+</div>
+
+<div class="row-fluid">
+  <div class="span3 col-md-3">
+    <div id="toc"></div>
+  </div>
+  <div class="main-content span9 col-md-9">
 
 <div id="header">
 <h1 class="title">Aggregating and analyzing data with dplyr</h1>
 <h4 class="author"><em>Data Carpentry contributors</em></h4>
 </div>
 
-<div id="TOC">
-<ul>
-<li><a href="#data-manipulation-using-dplyr">Data manipulation using dplyr</a><ul>
-<li><a href="#what-is-dplyr">What is <code>dplyr</code>?</a><ul>
-<li><a href="#selecting-columns-and-filtering-rows">Selecting columns and filtering rows</a></li>
-<li><a href="#pipes">Pipes</a></li>
-<li><a href="#mutate">Mutate</a></li>
-<li><a href="#split-apply-combine-data-analysis-and-the-summarize-function">Split-apply-combine data analysis and the summarize() function</a></li>
-</ul></li>
-</ul></li>
-</ul>
-</div>
 
 <hr />
 <div id="data-manipulation-using-dplyr" class="section level1">
@@ -215,6 +226,40 @@ surveys_sml</code></pre>
 </div>
 </div>
 
+  </div> <!--span-9-->
+</div> <!--row-fluid-->
+
+<!--
+<script src="libs/lightbox-2.8.2/js/lightbox.min.js"></script>
+
+<script>
+    lightbox.option({
+      'albumLabel': 'Example %1 of %2',
+      'resizeDuration': 200,
+      'fadeDuration': 200,
+      'wrapAround': true
+    })
+</script>
+-->
+
+<style type="text/css">
+.main-container {
+  max-width: none;
+}
+</style>
+
+<script>
+$(function() {
+    var toc = $("#toc").tocify({
+      selectors: "h2,h3",
+      theme: "bootstrap3",
+      context: '.main-content',
+      hashGenerator: 'pretty',
+      showAndHide: false
+    }).data("toc-tocify");
+    $(".optionName").popover({ trigger: "hover" });
+});
+</script>
 
 </div>
 
