--- a/index.html
+++ b/index.html
@@ -14,15 +14,30 @@
 
 <script src="libs/jquery-1.11.0/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="libs/bootstrap-3.3.1/css/readable.min.css" rel="stylesheet" />
+<link href="libs/bootstrap-3.3.1/css/cosmo.min.css" rel="stylesheet" />
 <script src="libs/bootstrap-3.3.1/js/bootstrap.min.js"></script>
 <script src="libs/bootstrap-3.3.1/shim/html5shiv.min.js"></script>
 <script src="libs/bootstrap-3.3.1/shim/respond.min.js"></script>
+<link href="libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet">
+<script src="libs/tocify-1.9.1/jquery-ui-1.9.2.custom.min.js"></script>
+<script src="libs/tocify-1.9.1/jquery.tocify.min.js"></script>
+
+<link href="libs/lightbox-2.8.2/css/lightbox.min.css" rel="stylesheet">
+
+<style type="text/css">
+@media (max-width: 992px) {
+#toc {
+  position: relative;
+  width: 100%;
+  margin: 0px 0px 20px 0px;
+}
+}
+</style>
 
 
 
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css" type="text/css" />
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/octicons/3.3.0/octicons.css" type="text/css" />
+<link rel="stylesheet" href="libs/font-awesome-4.5.0/css/font-awesome.min.css" type="text/css" />
+<link rel="stylesheet" href="libs/octicons-3.3.0/octicons.css" type="text/css" />
 <link rel="stylesheet" href="styles/styles.css" type="text/css" />
 
 </head>
@@ -46,10 +61,11 @@ img {
 </style>
 <div class="container-fluid main-container">
 
+
+<div class="row-fluid">
 <div class="navbar navbar-default navbar-fixed-top navbar-transparent">
   <div class="container">
     <div class="navbar-header">
-      <!--<a href="./" class="navbar-brand"><img src="img/Bren-logo_height50.png">env-info</a>-->
       <a href="./" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
@@ -69,34 +85,19 @@ img {
     </div>
   </div>
 </div>
+</div>
+
+<div class="row-fluid">
+  <div class="span3 col-md-3">
+    <div id="toc"></div>
+  </div>
+  <div class="main-content span9 col-md-9">
 
 <div id="header">
 <h1 class="title">index</h1>
 <h4 class="date"><em>January 5, 2016</em></h4>
 </div>
 
-<div id="TOC">
-<ul>
-<li><a href="#overview">Overview</a><ul>
-<li><a href="#instructors">Instructors</a></li>
-<li><a href="#feedback">Feedback</a></li>
-<li><a href="#workload">Workload</a></li>
-<li><a href="#grading">Grading</a></li>
-</ul></li>
-<li><a href="#schedule">Schedule</a><ul>
-<li><a href="#wk-1.-reproducible-science-tools">Wk 1. Reproducible Science Tools</a></li>
-<li><a href="#wk-2.-programming-concepts">Wk 2. Programming Concepts</a></li>
-<li><a href="#wk-3.-reading-and-wrangling-data">Wk 3. Reading and Wrangling Data</a></li>
-<li><a href="#wk-4.-tidying-up-data">Wk 4. Tidying up Data</a></li>
-<li><a href="#wk-5.-visualizing-data">Wk 5. Visualizing Data</a></li>
-<li><a href="#wk-6.-interactive-plots-and-maps">Wk 6. Interactive Plots and Maps</a></li>
-<li><a href="#wk-7.-interactive-applications">Wk 7. Interactive Applications</a></li>
-<li><a href="#wk-8.-advanced-programming">Wk 8. Advanced Programming</a></li>
-<li><a href="#wk-9.-documentation-and-testing">Wk 9. Documentation and Testing</a></li>
-<li><a href="#wk-10.-final-project-presentations">Wk 10. Final Project Presentations</a></li>
-</ul></li>
-</ul>
-</div>
 
 <div id="overview" class="section level2">
 <h2>Overview</h2>
@@ -194,6 +195,40 @@ img {
 </div>
 </div>
 
+  </div> <!--span-9-->
+</div> <!--row-fluid-->
+
+<!--
+<script src="libs/lightbox-2.8.2/js/lightbox.min.js"></script>
+
+<script>
+    lightbox.option({
+      'albumLabel': 'Example %1 of %2',
+      'resizeDuration': 200,
+      'fadeDuration': 200,
+      'wrapAround': true
+    })
+</script>
+-->
+
+<style type="text/css">
+.main-container {
+  max-width: none;
+}
+</style>
+
+<script>
+$(function() {
+    var toc = $("#toc").tocify({
+      selectors: "h2,h3",
+      theme: "bootstrap3",
+      context: '.main-content',
+      hashGenerator: 'pretty',
+      showAndHide: false
+    }).data("toc-tocify");
+    $(".optionName").popover({ trigger: "hover" });
+});
+</script>
 
 </div>
 
