--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 
 
-<title>index</title>
+<title>Environmental Informatics</title>
 
 <script src="libs/jquery-1.11.0/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -94,7 +94,8 @@ img {
   <div class="main-content span9 col-md-9">
 
 <div id="header">
-<h1 class="title">index</h1>
+<h1 class="title">Environmental Informatics</h1>
+<h3 class="subtitle"><em>ESM 296-3W (Winter 2016)</em></h3>
 <h4 class="date"><em>January 5, 2016</em></h4>
 </div>
 
