added data, notes, reorg

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ img {
 
 <div id="header">
 <h1 class="title">Environmental Informatics</h1>
-<h3 class="subtitle"><em>ESM 296-3W (Winter 2016)</em></h3>
+<h3 class="subtitle"><em>ESM 296-3W (winter 2016)</em></h3>
 <h4 class="date"><em>January 5, 2016</em></h4>
 </div>
 
