cleanup, Interaction w/ feedback form, stickies

--- a/index.html
+++ b/index.html
@@ -111,11 +111,16 @@ img {
 <li><a href="http://www.bdbest.org">Ben Best</a> (office hours TBD)</li>
 </ul>
 </div>
-<div id="feedback" class="section level3">
-<h3>Feedback</h3>
+<div id="interaction" class="section level3">
+<h3>Interaction</h3>
 <ul>
-<li>messaging forum at <a href="https://bren-envinfo.slack.com">bren-envinfo.slack.com</a></li>
-<li>anonymous feedback at …</li>
+<li><strong>Forum</strong> at <a href="https://env-info.slack.com">env-info.slack.com</a></li>
+<li><a href="https://goo.gl/forms/mIeOu7Xoaw"><strong>Feedback</strong></a> using Google Forms</li>
+<li><strong>Stickies</strong>, aka post-it notes, available to pickup and return at front table, to be placed on top of computer:
+<ul>
+<li><a href="#" class="btn btn-danger btn-sm">Help!</a> Use the red stickies to let us know you’re stuck with a problem; spares arm raising.</li>
+<li><a href="#" class="btn btn-success btn-sm">Done</a> Flag the green sticky once you’ve finished working through material as a class.</li>
+</ul></li>
 </ul>
 </div>
 <div id="workload" class="section level3">
