added 'fork me on github'

--- a/wk01_github/rmarkdown.html
+++ b/wk01_github/rmarkdown.html
@@ -96,7 +96,9 @@
 <slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Rmarkdown</h2></hgroup><article  id="rmarkdown">
 
 <ul>
-<li><a href='https://help.github.com/articles/github-flavored-markdown' title=''>Github flavored markdown</a> like in default README.md</li>
+<li><p><a href='https://help.github.com/articles/github-flavored-markdown' title=''>Github flavored markdown</a> like in default README.md</p></li>
+<li><p>Rstudio menu Help &gt; Markdown Quick Reference</p></li>
+<li><p><a href='http://rmarkdown.rstudio.com/' title=''>R Markdown — Dynamic Documents for R</a></p></li>
 </ul>
 
 </article></slide><slide class=''><hgroup><h2>hadley_4ds: Recommendations for learning more about communication:</h2></hgroup><article  id="hadley_4ds-recommendations-for-learning-more-about-communication">
