mv Setup to end

--- a/wk00_general/intro.html
+++ b/wk00_general/intro.html
@@ -184,10 +184,6 @@
 </tr>
 </table>
 
-</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Setup</h2></hgroup><article  id="setup" class="smaller ">
-
-<p><a href='../setup.html' title=''>setup</a>: install and configure R, Rstudio, Git, Github</p>
-
 </article></slide><slide class=''><hgroup><h2>Flagology</h2></hgroup><article  id="flagology" class="smaller ">
 
 <p>Regularly:</p>
@@ -214,7 +210,11 @@ blue: <strong>Project</strong></span> ideas</p></li>
 <li><strong>Forum</strong> at <a href='https://env-info.slack.com' title=''>env-info.slack.com</a> - need to be invited by <span class="cite">@bbest</span></li>
 <li><a href='https://goo.gl/forms/mIeOu7Xoaw' title=''><strong>Feedback</strong></a> using Google Forms</li>
 <li><a href='https://github.com/ucsb-bren/env-info/issues' title=''><strong>Issues</strong></a> for <code>ucsb-bren/env-info</code></li>
-</ul></article></slide>
+</ul>
+
+</article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Setup</h2></hgroup><article  id="setup" class="smaller ">
+
+<p><a href='../setup.html' title=''>setup</a>: install and configure R, Rstudio, Git, Github</p></article></slide>
 
 
   <slide class="backdrop"></slide>
