added DataONE guides

--- a/refs.html
+++ b/refs.html
@@ -137,7 +137,7 @@ img {
 
 <div id="header">
 <h1 class="title">References</h1>
-<h4 class="date"><em>2016-01-07 21:28</em></h4>
+<h4 class="date"><em>2016-01-11 12:04</em></h4>
 </div>
 
 
@@ -158,6 +158,8 @@ img {
 <h2>Literature</h2>
 <ul>
 <li><a href="refs/lit/Baumer%20et%20al.%20-%202014%20-%20R%20Markdown%20Integrating%20A%20Reproducible%20Analysis%20To.pdf">Baumer et al. - 2014 - R Markdown Integrating A Reproducible Analysis To.pdf</a></li>
+<li><a href="refs/lit/DataONE%202012%20Best%20Practices%20Primer%20DataONE_BP_Primer_020212.pdf">DataONE 2012 Best Practices Primer DataONE_BP_Primer_020212.pdf</a></li>
+<li><a href="refs/lit/DataONE%20Data%20Management%20Guide%20for%20Public%20Participation%20PPSR-DataManagementGuide.pdf">DataONE Data Management Guide for Public Participation PPSR-DataManagementGuide.pdf</a></li>
 <li><a href="refs/lit/Hampton%20et%20al%20-%202014%20-%20The%20tao%20of%20open%20science%20for%20ecology.pdf">Hampton et al - 2014 - The tao of open science for ecology.pdf</a></li>
 <li><a href="refs/lit/Teal%20et%20al%20-%202015%20-%20Data%20Carpentry.pdf">Teal et al - 2015 - Data Carpentry.pdf</a></li>
 <li><a href="refs/lit/Wilson%20et%20al%20-%202014%20-%20Best%20Practices%20for%20Scientific%20Computing.pdf">Wilson et al - 2014 - Best Practices for Scientific Computing.pdf</a></li>
