+ real skillz: science-the-shit-out-of-this

--- a/wk02_program/rmarkdown.html
+++ b/wk02_program/rmarkdown.html
@@ -105,6 +105,15 @@
 <li><p><strong>Group</strong> to <em><strong>apply</strong></em>: apply new technique to your group project (ie specific data and question)</p></li>
 </ol>
 
+</article></slide><slide class=''><hgroup><h2>Real Skills Learned</h2></hgroup><article  id="real-skills-learned">
+
+<ul class = 'build'>
+<li><p>Technology changes rapidly</p></li>
+<li><p>Yes, you&#39;re learning about tools and libraries specific to R, but the concepts are applicable to most any programming language</p></li>
+<li><p>The real skill learned here is <strong>critical thinking</strong> / <strong>problem solving</strong> / <strong>googling</strong> to figure out how to get your science done!</p></li>
+<li><p><img height=400 src="img/science-the-shit-out-of-this.jpg"/></p></li>
+</ul>
+
 </article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Rmarkdown</h2></hgroup><article  id="rmarkdown">
 
 </article></slide><slide class=''><hgroup><h2>Inspiration</h2></hgroup><article  id="inspiration" class="flexbox vcenter">
