+ Help, fixed first.* links

--- a/wk02_program/rmarkdown.html
+++ b/wk02_program/rmarkdown.html
@@ -202,11 +202,18 @@ $$</pre>
 <p>Rstudio: menu File &gt; New File &gt; Rmarkdown&#8230; Document, HTML. Knit HMTL button.</p>
 
 <ul class = 'build'>
-<li><a href='https://github.com/ucsb-bren/env-info/blob/gh-pages/wk01_github/first.Rmd' title=''>first.<strong>Rmd</strong></a></li>
-<li><a href='https://ucsb-bren.github.io/env-info/wk01_github/first.html' title=''>first.<strong>html</strong></a></li>
+<li><a href='https://github.com/ucsb-bren/env-info/blob/gh-pages/wk02_program/first.Rmd' title=''>first.<strong>Rmd</strong></a></li>
+<li><a href='https://ucsb-bren.github.io/env-info/wk02_program/first.html' title=''>first.<strong>html</strong></a></li>
 </ul>
 
-<p>Rstudio: menu Help &gt; Markdown Quick Reference</p>
+</article></slide><slide class=''><hgroup><h2>Help</h2></hgroup><article  id="help">
+
+<ul class = 'build'>
+<li>Rstudio menu Help &gt; <a href='http://rmarkdown.rstudio.com/authoring_basics.html' title=''>Markdown Quick Reference</a></li>
+<li><a href='../refs/cheatsheets/rmarkdown-cheatsheet.pdf' title=''>R Markdown Cheat Sheet</a></li>
+<li><a href='../refs/cheatsheets/rmarkdown-reference.pdf' title=''>R Markdown Reference Guide</a></li>
+<li><a href='https://guides.github.com/features/mastering-markdown/' title=''>Mastering Markdown · GitHub Guides</a></li>
+</ul>
 
 </article></slide><slide class=''><hgroup><h2>Further Resources</h2></hgroup><article  id="further-resources">
 
