--- a/wk02_program/rmarkdown.html
+++ b/wk02_program/rmarkdown.html
@@ -114,6 +114,14 @@
 <li><p><img height=400 src="img/science-the-shit-out-of-this.jpg"/></p></li>
 </ul>
 
+</article></slide><slide class=''><hgroup><h2>Flipped Classroom</h2></hgroup><article  id="flipped-classroom">
+
+<p>Teacher&#39;s role: &quot;Sage on the Stage&quot; -&gt; &quot;Guide on the Side&quot;</p>
+
+<img src='img/flipped-classroom.png' title=''/>
+
+<p>Inspired by <a href='http://www.datacarpentry.org/semester-biology/about/flipped-classes/' title=''>Data Carpentry for Biologists</a>, created by <a href='https://www.knewton.com/infographics/flipped-classroom/' title=''>Knewton</a></p>
+
 </article></slide><slide class='segue dark nobackground'><hgroup class = 'auto-fadein'><h2>Rmarkdown</h2></hgroup><article  id="rmarkdown">
 
 </article></slide><slide class=''><hgroup><h2>Inspiration</h2></hgroup><article  id="inspiration" class="flexbox vcenter">
