moved *.(png|csv) to (images|data)/<username>_*.*

--- a/students/jcvdav.html
+++ b/students/jcvdav.html
@@ -104,7 +104,7 @@ img {
 <div id="some-examples" class="section level2">
 <h2>Some examples</h2>
 <pre class="r"><code># Read some data
-SemPul=read.csv(&quot;SemPul.csv&quot;, sep=&quot;;&quot;)
+SemPul=read.csv(&quot;data/jcvdav_SemPul.csv&quot;, sep=&quot;;&quot;)
 # Data has been modified from the original, which is confidential
 
 # Now a summary
