--- a/students/jupa1089.html
+++ b/students/jupa1089.html
@@ -94,7 +94,7 @@ img {
 <h2>Data</h2>
 <p>We have preliminary survey result data from Mark Buntaine. These are in excel format and will have any identifying information removed.</p>
 <pre class="r"><code>#read csv
-d = read.csv('jupa1089_ugandaSMS.csv')
+d = read.csv('data/jupa1089_ugandaSMS.csv')
 
 #output summary
 summary(d)</code></pre>
