--- a/students/smccutcheon.html
+++ b/students/smccutcheon.html
@@ -113,7 +113,7 @@ img {
 <div id="data-file" class="section level3">
 <h3>Data File</h3>
 <pre class="r"><code>#read csv
-d=read.csv('data/FullData.csv')
+d=read.csv('data/smccutcheon_FullData.csv')
 
 #output summary
 summary(d)</code></pre>
