--- a/students/maierucsb.html
+++ b/students/maierucsb.html
@@ -70,6 +70,7 @@ img {
 
 <p>## <strong>Content</strong></p>
 <p>I am interested in reducing waste and inefficient products that create environmental and toxilogical harm. I am also interested in GIS and visualizing geographic data in useful and interesting ways (<em>especially data related to global deforestation right now as it is a large component of my thesis project</em>)</p>
+<p>In this class I will be looking into pollution statistics… <a href="https://github.com/pollute/pollute.github.io">see my group site here</a></p>
 <p>## <strong>Techniques</strong></p>
 <p>I think collaborative model building and interactive plots and maps will be very useful for my project now and research in the future.</p>
 <p>## <strong>Data</strong></p>
