fixes for @jepa, @julimatos

--- a/refs.html
+++ b/refs.html
@@ -46,6 +46,13 @@
 
 <link href="libs/lightbox-2.8.2/css/lightbox.min.css" rel="stylesheet">
 
+<!--
+Font Awesome: http://fortawesome.github.io/Font-Awesome/icons
+Octicons:     https://octicons.github.com
+-->
+<link rel="stylesheet" href="libs/font-awesome-4.5.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="libs/octicons-3.3.0/octicons.css">
+
 <style type="text/css">
 @media (max-width: 992px) {
 #toc {
@@ -138,7 +145,7 @@ img {
 
 <div id="header">
 <h1 class="title">References</h1>
-<h4 class="date"><em>2016-01-19 13:25</em></h4>
+<h4 class="date"><em>2016-01-20 14:27</em></h4>
 </div>
 
 
@@ -220,6 +227,10 @@ $(function() {
     $(".optionName").popover({ trigger: "hover" });
 });
 </script>
+
+<div style="color:gray">
+  <span class="octicon octicon-repo-forked"></span> <b>Fork</b> me at <a href="http://github.com/ucsb-bren/env-info">github.com/<b>ucsb-bren/env-info</b></a>
+</div>
 
 </div>
 
