--- a/students/jepa.html
+++ b/students/jepa.html
@@ -88,7 +88,7 @@ img {
 <h3>Data</h3>
 <p>I still have no data for my proyect. I Could use some of the FAOStats available data. I would like to address climate change impacts to a certain species or may be a group of.</p>
 <pre class="r"><code> # read csv
-Data = read.csv(&quot;data/julianopalaciosabrantes_ReefPerch.csv&quot;)
+Data = read.csv(&quot;data/jepa_ReefPerch.csv&quot;)
       
 # output summary
 summary(Data)</code></pre>
