--- a/students/alxsmith.html
+++ b/students/alxsmith.html
@@ -127,7 +127,7 @@ img {
 </ul>
 <pre class="r"><code>#read csv
 
-data=read.csv(&quot;~/Documents/R/Informatics/env_info_page/students/alx_fishermen.csv&quot;)
+data=read.csv('data/alxsmith_*.csv')
 
 #output summary 
 summary(data)</code></pre>
