--- a/students/naomitague.html
+++ b/students/naomitague.html
@@ -79,6 +79,20 @@ img {
 <h4 class="date"><em>January 15, 2016</em></h4>
 </div>
 
+<div id="TOC">
+<ul>
+<li><a href="#content">Content</a></li>
+<li><a href="#techniques">Techniques</a></li>
+<li><a href="#data">Data</a></li>
+<li><a href="#data-wrangling">Data Wrangling</a></li>
+<li><a href="#install-packages">Install Packages</a><ul>
+<li><a href="#utilsread.csv">utils::read.csv</a></li>
+<li><a href="#readrread_csv">readr::read_csv</a></li>
+<li><a href="#dplrytbl_df">dplry::tbl_df</a></li>
+<li><a href="#dplyr-loosely">dplyr loosely</a></li>
+</ul></li>
+</ul>
+</div>
 
 <div id="content" class="section level2">
 <h2>Content</h2>
