--- a/wk03_dplyr.html
+++ b/wk03_dplyr.html
@@ -11,7 +11,7 @@
 <meta name="author" content="Ben Best" />
 
 
-<title>Week 3: Tutorial on Reading and Wrangling Data</title>
+<title>Week 3: Reading and Wrangling Data</title>
 
 <script src="libs/jquery-1.11.0/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -145,9 +145,9 @@ img {
   <div class="main-content span9 col-md-9">
 
 <div id="header">
-<h1 class="title">Week 3: Tutorial on Reading and Wrangling Data</h1>
+<h1 class="title">Week 3: Reading and Wrangling Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-01-25 18:16</em></h4>
+<h4 class="date"><em>2016-01-25 18:18</em></h4>
 </div>
 
 
