--- a/wk03_dplyr.html
+++ b/wk03_dplyr.html
@@ -115,7 +115,7 @@ img {
 <div class="navbar navbar-default navbar-fixed-top navbar-transparent">
   <div class="container">
     <div class="navbar-header">
-      <a href="/" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
+      <a href="http://ucsb-bren.github.io/env-info/" class="navbar-brand"><i class="fa fa-home"></i> env-info</a>
       <button class="navbar-toggle" type="button" data-toggle="collapse" data-target="#navbar-main">
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
@@ -147,7 +147,7 @@ img {
 <div id="header">
 <h1 class="title">Week 3: Reading and Wrangling Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-01-25 18:20</em></h4>
+<h4 class="date"><em>2016-01-25 18:44</em></h4>
 </div>
 
 
