--- a/students/sparrow925.html
+++ b/students/sparrow925.html
@@ -68,6 +68,8 @@ img {
 </div>
 
 
+<div id="boop" class="section level1">
+<h1>boop</h1>
 <div id="content" class="section level4">
 <h4><span style="color:red"><strong>Content</strong></span></h4>
 <p>I am interested in environmental remediation: pollution modeling and the data analysis that comes with that are my jam. I also think that the tools we are learning in this class are useful in the corporate setting – performance metrics, etc. could all be run through tools like this.</p>
@@ -90,6 +92,7 @@ img {
 <div id="data" class="section level4">
 <h4><span style="color:red"><strong>Data</strong></span></h4>
 <p>So far our group is only working with data samples given in RStudio, but as we evolve this quarter I’m excited to see what we dig up!</p>
+</div>
 </div>
 
 
