--- a/wk03_dplyr.html
+++ b/wk03_dplyr.html
@@ -147,7 +147,7 @@ img {
 <div id="header">
 <h1 class="title">Week 3: Reading and Wrangling Data</h1>
 <h4 class="author"><em>Ben Best</em></h4>
-<h4 class="date"><em>2016-01-25 18:44</em></h4>
+<h4 class="date"><em>2016-01-26 15:32</em></h4>
 </div>
 
 
@@ -315,7 +315,7 @@ surveys_4 = aggregate(species_id ~ year, data=surveys_3, FUN=&#39;length&#39;)
 # write to csv
 write.csv(surveys_4, &#39;data/surveys_bbest.csv&#39;, row.names = FALSE)</code></pre>
 <p>Because the variables are named sequentially, ie <code>surveys_2</code> to <code>surveys_4</code>, it is relatively easy to follow, but so often in the course of playing with data these names are very different. And then we quickly lose track of which operations get applied to which variables.</p>
-<p>Even with obvious variable names, there is a redunancy to assigning a new variable new to the output of each operation.</p>
+<p>Even with obvious variable names, there is a redunancy, as we’ll see shortly, to assigning a new variable name to the output of each operation and input of each subsequent operation.</p>
 </div>
 <div id="nested-functions" class="section level3">
 <h3>Nested Functions</h3>
@@ -339,7 +339,7 @@ write.csv(
 <ol style="list-style-type: decimal">
 <li><p>surveys gets sliced <code>[]</code> into rows and columns in one call, which gets used as the <code>data =</code> argument to</p></li>
 <li><p><code>aggregate()</code>, which applies the <code>length()</code> function to get a count to the formula <code>species_id ~ year</code> in which the <code>species_id</code> gets split into groups based on <code>year</code>, which gets further applied as the unnamed first argument to</p></li>
-<li><p><code>write.csv()</code> which has the additional unnamed arguments specifying the output file and turning off the default option to write row numbers as names.</p></li>
+<li><p><code>write.csv()</code> which has the additional unnamed argument specifying the output file and named argument turning off the default option to prefix row numbers.</p></li>
 </ol>
 <p>Although we’ve saved space from not performing the extra naming of variables, we’ve made the code very difficult to read, needing to parse which functions are arguments to subsequent functions. The indentation helps readability a bit, but now let’s examine a far better solution to either approaches above with <code>dplyr</code>.</p>
 </div>
@@ -377,7 +377,7 @@ surveys %T&gt;%                          # note tee operator %T&gt;% for glimpse
 <div id="presentation" class="section level2">
 <h2>Presentation</h2>
 <ul>
-<li><a href="wrangling-webinar.pdf" class="uri">wrangling-webinar.pdf</a></li>
+<li><a href="wk03_dplyr/wrangling-webinar.pdf">wrangling-webinar.pdf</a></li>
 </ul>
 </div>
 <div id="references" class="section level2">
